Ajustes na página inicial, colocando o link para o site da prefeitura

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-xs-12 text-right">
+                                <p class="site"><a href="http://coqueiral.mg.gov.br/" target="_blank">Prefeitura Municipal de Coqueiral</a></p>
                                 <p class="num">(35) 3855-1165 / 3855-1163</p>
                                 <ul class="fh5co-social">
                                     <li><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -71,7 +72,7 @@
                             <div class="col-xs-10 text-right menu-1">
                                 <ul>
                                     <li class="has-dropdown">
-                                        <a href="about.html">Serviços</a>
+                                        <a href="#">Serviços</a>
                                         <ul class="dropdown">
                                             <li><a href="#">2ª Via</a></li>
                                             <li><a href="#">Quitação de Débitos</a></li>
@@ -80,11 +81,11 @@
                                             <li><a href="#">Tarifas</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="pricing.html">Transparência</a></li>
-                                    <li><a href="pricing.html">Licitações</a></li>
-                                    <li><a href="pricing.html">Portarias</a></li>
-                                    <li><a href="pricing.html">Comunicados</a></li>
-                                    <li><a href="contact.html">Notícias</a></li>
+                                    <li><a href="#">Transparência</a></li>
+                                    <li><a href="licitacoes.html">Licitações</a></li>
+                                    <li><a href="portarias.html">Portarias</a></li>
+                                    <li><a href="comunicados.html">Comunicados</a></li>
+                                    <li><a href="noticias.html">Notícias</a></li>
                                     <li><a href="contact.html">Contato</a></li>
                                 </ul>
                             </div>
@@ -190,7 +191,7 @@
                                 <div class="date text-center"><span>15<br>Mar.</span></div>
                                 <h3><a href="#">USA, International Triathlon Event</a></h3>
                                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                <p><a href="#">Read More</a></p>
+                                <p><a href="#">Veja Mais</a></p>
                             </div>
                         </div>
                         <div class="col-md-4 ">
@@ -198,7 +199,7 @@
                                 <div class="date text-center"><span>15<br>Mar.</span></div>
                                 <h3><a href="#">USA, International Triathlon Event</a></h3>
                                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                <p><a href="#">Read More</a></p>
+                                <p><a href="#">Veja Mais</a></p>
                             </div>
                         </div>
                         <div class="col-md-4 ">
@@ -206,7 +207,7 @@
                                 <div class="date text-center"><span>15<br>Mar.</span></div>
                                 <h3><a href="#">New Device Develope by Microsoft</a></h3>
                                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                <p><a href="#">Read More</a></p>
+                                <p><a href="#">Veja Mais</a></p>
                             </div>
                         </div>
                     </div>
