Adição dos menus de qualidade e tarifas

--- a/contact.html
+++ b/contact.html
@@ -79,8 +79,8 @@
 											<li><a href="#">2ª Via</a></li>
 											<li><a href="#">Quitação de Débitos</a></li>
 											<li><a href="#">Atualização de Cadastro</a></li>
-											<li><a href="#">Qualidade</a></li>
-											<li><a href="#">Tarifas</a></li>
+											<li><a href="qualidade.html">Qualidade</a></li>
+											<li><a href="tarifas.html">Tarifas</a></li>
 										</ul>
 									</li>
 									<li><a href="#">Transparência</a></li>
