--- a/tarifas.html
+++ b/tarifas.html
@@ -100,35 +100,48 @@
 
             <div id="fh5co-about">
                 <div class="container">
-                    <div class="col-md-12 animate-box">
-                        <span>Ano 2016</span>
-                        <h2>Estrutura Tarifária</h2>
-                        <h3>Serviço Estimado</h3>
-                        <table>
-                            <thead>
-                                <tr>
-                                    <td rowspan="2">Categoria</td>
-                                    <td colspan="2">Tarifa Social</td>
-                                    <td colspan="2">Tarifa de Água</td>
-                                    <td colspan="2">Tarifa de Esgoto</td>
-                                </tr>
-                                <tr>
-                                    <td>Valor</td>
-                                    <td>Estimativa</td>
-                                    <td>Valor</td>
-                                    <td>Estimativa</td>
-                                    <td>Valor</td>
-                                    <td>Estimativa</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                            </tbody>
-                        </table>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="box">
+                                <div class="box-header">
+                                    <h2>Estrutura Tarifária (Ano 2016)</h2>
+                                    <h3 class="box-title">Serviço Estimado</h3>
+                                </div>
+                                <!-- /.box-header -->
+                                <div class="box-body table-responsive no-padding">
+                                    <table class="table table-hover">
+                                        <tr>
+                                            <th>Categoria</th>
+                                            <th>Tarifa Social</th>
+                                            <th>Tarifa de Água</th>
+                                            <th>Tarifa de Esgoto</th>
+                                        </tr>
+                                        <tr>
+                                            <td>Domiciliar</td>
+                                            <td>0,0000 (0 m³/mês)</td>
+                                            <td>32,1665 (20 m³/mês)</td>
+                                            <td>9,6500</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Comercial</td>
+                                            <td>N/D</td>
+                                            <td>60,4383 (40 m³/mês)</td>
+                                            <td>18,1315</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Industrial</td>
+                                            <td>N/D</td>
+                                            <td>0,0000 (80 m³/mês)</td>
+                                            <td>0,0000</td>
+                                        </tr>
+                                    </table>
+                                </div>
+                                <!-- /.box-body -->
+                            </div>
+                            <!-- /.box -->
+                        </div>
                     </div>
+
                 </div>
             </div>
 
