Alterações no conteúdo de página em breve

--- a/breve.html
+++ b/breve.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Qualidade da Água | SAAE Coqueiral - Serviço Autônomo de Água e Esgoto de Coqueiral</title>
+        <title>SAAE Coqueiral - Serviço Autônomo de Água e Esgoto de Coqueiral</title>
 
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400" rel="stylesheet">
@@ -128,7 +128,10 @@
             simplyCountdown('.simply-countdown-one', {
                 year: 2017,
                 month: 8,
-                day: 25,
+                day: 20,
+                hours: 15,
+                minutes: 0,
+                seconds: 0,
                 words: {
                     days: 'dia',
                     hours: 'hora',
