Retirada do scroll da página "em breve"

--- a/breve.html
+++ b/breve.html
@@ -41,7 +41,7 @@
         <![endif]-->
     </head>
 
-    <body>
+    <body style="overflow: hidden">
 
         <div class="fh5co-loader"></div>
 
